removed unused code. closes 76.
--HG--
extra : convert_revision : cbfb7cf469e27c624c0b9c698283f2387ec797b1

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -58,13 +58,12 @@ am__objects_1 = yog_bdw-arg.$(OBJEXT) yog_bdw-array.$(OBJEXT) \
 	yog_bdw-function.$(OBJEXT) yog_bdw-gc.$(OBJEXT) \
 	yog_bdw-inst.$(OBJEXT) yog_bdw-int.$(OBJEXT) \
 	yog_bdw-klass.$(OBJEXT) yog_bdw-lexer.$(OBJEXT) \
-	yog_bdw-main.$(OBJEXT) yog_bdw-method.$(OBJEXT) \
-	yog_bdw-nil.$(OBJEXT) yog_bdw-object.$(OBJEXT) \
-	yog_bdw-package.$(OBJEXT) yog_bdw-parser.$(OBJEXT) \
-	yog_bdw-regexp.$(OBJEXT) yog_bdw-stacktrace.$(OBJEXT) \
-	yog_bdw-string.$(OBJEXT) yog_bdw-table.$(OBJEXT) \
-	yog_bdw-thread.$(OBJEXT) yog_bdw-value.$(OBJEXT) \
-	yog_bdw-vm.$(OBJEXT)
+	yog_bdw-main.$(OBJEXT) yog_bdw-nil.$(OBJEXT) \
+	yog_bdw-object.$(OBJEXT) yog_bdw-package.$(OBJEXT) \
+	yog_bdw-parser.$(OBJEXT) yog_bdw-regexp.$(OBJEXT) \
+	yog_bdw-stacktrace.$(OBJEXT) yog_bdw-string.$(OBJEXT) \
+	yog_bdw-table.$(OBJEXT) yog_bdw-thread.$(OBJEXT) \
+	yog_bdw-value.$(OBJEXT) yog_bdw-vm.$(OBJEXT)
 am_yog_bdw_OBJECTS = $(am__objects_1) yog_bdw-bdw.$(OBJEXT)
 yog_bdw_OBJECTS = $(am_yog_bdw_OBJECTS)
 yog_bdw_LDADD = $(LDADD)
@@ -81,13 +80,12 @@ am__objects_2 = yog_copying-arg.$(OBJEXT) yog_copying-array.$(OBJEXT) \
 	yog_copying-function.$(OBJEXT) yog_copying-gc.$(OBJEXT) \
 	yog_copying-inst.$(OBJEXT) yog_copying-int.$(OBJEXT) \
 	yog_copying-klass.$(OBJEXT) yog_copying-lexer.$(OBJEXT) \
-	yog_copying-main.$(OBJEXT) yog_copying-method.$(OBJEXT) \
-	yog_copying-nil.$(OBJEXT) yog_copying-object.$(OBJEXT) \
-	yog_copying-package.$(OBJEXT) yog_copying-parser.$(OBJEXT) \
-	yog_copying-regexp.$(OBJEXT) yog_copying-stacktrace.$(OBJEXT) \
-	yog_copying-string.$(OBJEXT) yog_copying-table.$(OBJEXT) \
-	yog_copying-thread.$(OBJEXT) yog_copying-value.$(OBJEXT) \
-	yog_copying-vm.$(OBJEXT)
+	yog_copying-main.$(OBJEXT) yog_copying-nil.$(OBJEXT) \
+	yog_copying-object.$(OBJEXT) yog_copying-package.$(OBJEXT) \
+	yog_copying-parser.$(OBJEXT) yog_copying-regexp.$(OBJEXT) \
+	yog_copying-stacktrace.$(OBJEXT) yog_copying-string.$(OBJEXT) \
+	yog_copying-table.$(OBJEXT) yog_copying-thread.$(OBJEXT) \
+	yog_copying-value.$(OBJEXT) yog_copying-vm.$(OBJEXT)
 am_yog_copying_OBJECTS = $(am__objects_2) \
 	yog_copying-copying.$(OBJEXT)
 yog_copying_OBJECTS = $(am_yog_copying_OBJECTS)
@@ -114,9 +112,7 @@ am__objects_3 = yog_generational-arg.$(OBJEXT) \
 	yog_generational-int.$(OBJEXT) \
 	yog_generational-klass.$(OBJEXT) \
 	yog_generational-lexer.$(OBJEXT) \
-	yog_generational-main.$(OBJEXT) \
-	yog_generational-method.$(OBJEXT) \
-	yog_generational-nil.$(OBJEXT) \
+	yog_generational-main.$(OBJEXT) yog_generational-nil.$(OBJEXT) \
 	yog_generational-object.$(OBJEXT) \
 	yog_generational-package.$(OBJEXT) \
 	yog_generational-parser.$(OBJEXT) \
@@ -150,8 +146,8 @@ am__objects_4 = yog_mark_sweep-arg.$(OBJEXT) \
 	yog_mark_sweep-function.$(OBJEXT) yog_mark_sweep-gc.$(OBJEXT) \
 	yog_mark_sweep-inst.$(OBJEXT) yog_mark_sweep-int.$(OBJEXT) \
 	yog_mark_sweep-klass.$(OBJEXT) yog_mark_sweep-lexer.$(OBJEXT) \
-	yog_mark_sweep-main.$(OBJEXT) yog_mark_sweep-method.$(OBJEXT) \
-	yog_mark_sweep-nil.$(OBJEXT) yog_mark_sweep-object.$(OBJEXT) \
+	yog_mark_sweep-main.$(OBJEXT) yog_mark_sweep-nil.$(OBJEXT) \
+	yog_mark_sweep-object.$(OBJEXT) \
 	yog_mark_sweep-package.$(OBJEXT) \
 	yog_mark_sweep-parser.$(OBJEXT) \
 	yog_mark_sweep-regexp.$(OBJEXT) \
@@ -187,7 +183,6 @@ am__objects_5 = yog_mark_sweep_compact-arg.$(OBJEXT) \
 	yog_mark_sweep_compact-klass.$(OBJEXT) \
 	yog_mark_sweep_compact-lexer.$(OBJEXT) \
 	yog_mark_sweep_compact-main.$(OBJEXT) \
-	yog_mark_sweep_compact-method.$(OBJEXT) \
 	yog_mark_sweep_compact-nil.$(OBJEXT) \
 	yog_mark_sweep_compact-object.$(OBJEXT) \
 	yog_mark_sweep_compact-package.$(OBJEXT) \
@@ -372,7 +367,6 @@ COMMON_SOURCES = arg.c \
 	klass.c \
 	lexer.c \
 	main.c \
-	method.c \
 	nil.c \
 	object.c \
 	package.c \
@@ -527,7 +521,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-klass.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-lexer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-main.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-method.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-nil.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-package.Po@am__quote@
@@ -561,7 +554,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-klass.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-lexer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-main.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-method.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-nil.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-package.Po@am__quote@
@@ -597,7 +589,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-lexer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-mark-sweep-compact.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-method.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-nil.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-package.Po@am__quote@
@@ -631,7 +622,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-lexer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-mark-sweep.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-method.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-nil.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-package.Po@am__quote@
@@ -665,7 +655,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-lexer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-mark-sweep-compact.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-method.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-nil.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-package.Po@am__quote@
@@ -992,20 +981,6 @@ yog_bdw-main.obj: main.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='main.c' object='yog_bdw-main.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -c -o yog_bdw-main.obj `if test -f 'main.c'; then $(CYGPATH_W) 'main.c'; else $(CYGPATH_W) '$(srcdir)/main.c'; fi`
-
-yog_bdw-method.o: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -MT yog_bdw-method.o -MD -MP -MF $(DEPDIR)/yog_bdw-method.Tpo -c -o yog_bdw-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_bdw-method.Tpo $(DEPDIR)/yog_bdw-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_bdw-method.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -c -o yog_bdw-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-
-yog_bdw-method.obj: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -MT yog_bdw-method.obj -MD -MP -MF $(DEPDIR)/yog_bdw-method.Tpo -c -o yog_bdw-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_bdw-method.Tpo $(DEPDIR)/yog_bdw-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_bdw-method.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -c -o yog_bdw-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
 
 yog_bdw-nil.o: nil.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -MT yog_bdw-nil.o -MD -MP -MF $(DEPDIR)/yog_bdw-nil.Tpo -c -o yog_bdw-nil.o `test -f 'nil.c' || echo '$(srcdir)/'`nil.c
@@ -1469,20 +1444,6 @@ yog_copying-main.obj: main.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -c -o yog_copying-main.obj `if test -f 'main.c'; then $(CYGPATH_W) 'main.c'; else $(CYGPATH_W) '$(srcdir)/main.c'; fi`
 
-yog_copying-method.o: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -MT yog_copying-method.o -MD -MP -MF $(DEPDIR)/yog_copying-method.Tpo -c -o yog_copying-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_copying-method.Tpo $(DEPDIR)/yog_copying-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_copying-method.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -c -o yog_copying-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-
-yog_copying-method.obj: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -MT yog_copying-method.obj -MD -MP -MF $(DEPDIR)/yog_copying-method.Tpo -c -o yog_copying-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_copying-method.Tpo $(DEPDIR)/yog_copying-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_copying-method.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -c -o yog_copying-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
-
 yog_copying-nil.o: nil.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -MT yog_copying-nil.o -MD -MP -MF $(DEPDIR)/yog_copying-nil.Tpo -c -o yog_copying-nil.o `test -f 'nil.c' || echo '$(srcdir)/'`nil.c
 @am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_copying-nil.Tpo $(DEPDIR)/yog_copying-nil.Po
@@ -1944,20 +1905,6 @@ yog_generational-main.obj: main.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='main.c' object='yog_generational-main.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -c -o yog_generational-main.obj `if test -f 'main.c'; then $(CYGPATH_W) 'main.c'; else $(CYGPATH_W) '$(srcdir)/main.c'; fi`
-
-yog_generational-method.o: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -MT yog_generational-method.o -MD -MP -MF $(DEPDIR)/yog_generational-method.Tpo -c -o yog_generational-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_generational-method.Tpo $(DEPDIR)/yog_generational-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_generational-method.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -c -o yog_generational-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-
-yog_generational-method.obj: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -MT yog_generational-method.obj -MD -MP -MF $(DEPDIR)/yog_generational-method.Tpo -c -o yog_generational-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_generational-method.Tpo $(DEPDIR)/yog_generational-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_generational-method.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -c -o yog_generational-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
 
 yog_generational-nil.o: nil.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -MT yog_generational-nil.o -MD -MP -MF $(DEPDIR)/yog_generational-nil.Tpo -c -o yog_generational-nil.o `test -f 'nil.c' || echo '$(srcdir)/'`nil.c
@@ -2449,20 +2396,6 @@ yog_mark_sweep-main.obj: main.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep-main.obj `if test -f 'main.c'; then $(CYGPATH_W) 'main.c'; else $(CYGPATH_W) '$(srcdir)/main.c'; fi`
 
-yog_mark_sweep-method.o: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -MT yog_mark_sweep-method.o -MD -MP -MF $(DEPDIR)/yog_mark_sweep-method.Tpo -c -o yog_mark_sweep-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep-method.Tpo $(DEPDIR)/yog_mark_sweep-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_mark_sweep-method.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-
-yog_mark_sweep-method.obj: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -MT yog_mark_sweep-method.obj -MD -MP -MF $(DEPDIR)/yog_mark_sweep-method.Tpo -c -o yog_mark_sweep-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep-method.Tpo $(DEPDIR)/yog_mark_sweep-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_mark_sweep-method.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
-
 yog_mark_sweep-nil.o: nil.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -MT yog_mark_sweep-nil.o -MD -MP -MF $(DEPDIR)/yog_mark_sweep-nil.Tpo -c -o yog_mark_sweep-nil.o `test -f 'nil.c' || echo '$(srcdir)/'`nil.c
 @am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep-nil.Tpo $(DEPDIR)/yog_mark_sweep-nil.Po
@@ -2924,20 +2857,6 @@ yog_mark_sweep_compact-main.obj: main.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='main.c' object='yog_mark_sweep_compact-main.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep_compact-main.obj `if test -f 'main.c'; then $(CYGPATH_W) 'main.c'; else $(CYGPATH_W) '$(srcdir)/main.c'; fi`
-
-yog_mark_sweep_compact-method.o: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -MT yog_mark_sweep_compact-method.o -MD -MP -MF $(DEPDIR)/yog_mark_sweep_compact-method.Tpo -c -o yog_mark_sweep_compact-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep_compact-method.Tpo $(DEPDIR)/yog_mark_sweep_compact-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_mark_sweep_compact-method.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep_compact-method.o `test -f 'method.c' || echo '$(srcdir)/'`method.c
-
-yog_mark_sweep_compact-method.obj: method.c
-@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -MT yog_mark_sweep_compact-method.obj -MD -MP -MF $(DEPDIR)/yog_mark_sweep_compact-method.Tpo -c -o yog_mark_sweep_compact-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
-@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep_compact-method.Tpo $(DEPDIR)/yog_mark_sweep_compact-method.Po
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='method.c' object='yog_mark_sweep_compact-method.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep_compact-method.obj `if test -f 'method.c'; then $(CYGPATH_W) 'method.c'; else $(CYGPATH_W) '$(srcdir)/method.c'; fi`
 
 yog_mark_sweep_compact-nil.o: nil.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -MT yog_mark_sweep_compact-nil.o -MD -MP -MF $(DEPDIR)/yog_mark_sweep_compact-nil.Tpo -c -o yog_mark_sweep_compact-nil.o `test -f 'nil.c' || echo '$(srcdir)/'`nil.c
