added Bignum class. refs 95.
--HG--
extra : convert_revision : 5969bd00102c6d3197cdaa0ab7e7816daf765249

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,6 +11,7 @@ YACC = $(LEMON)
 BUILT_SOURCES = parser.h keywords.inc
 COMMON_SOURCES = arg.c \
 	array.c \
+	bignum.c \
 	binary.c \
 	block.c \
 	bool.c \
