configure basic color scheme. closes 117.
--HG--
extra : convert_revision : 6ac617caaa3a42fa56acc36805224fafc37fd41e

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,5 +1,6 @@
 
 DIRS = @DIRS@
+prefix = @prefix@
 
 CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
 			 configure.lineno config.status.lineno
@@ -46,3 +47,6 @@ am--refresh:
 
 update-version:
 	cd src && $(MAKE) $@
+
+install-vim:
+	cp yog.vim $(prefix)/share/vim/vim71/syntax
