changed to use GNU MP. refs 95.
--HG--
extra : convert_revision : 25c6a68b571900fe78bfed0bb207ddacbcf6d6df

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -386,7 +386,9 @@ COMMON_SOURCES = arg.c \
 	value.c \
 	vm.c
 
-CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
+CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
+		-I$(GMP_DIR) -Wall
+
 LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl -export-dynamic \
 		 $(GMP_DIR)/.libs/libgmp.a
 
